# PitLane-AI

./: .gitignore  .pre-commit-config.yaml  .ruffignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/skills/f1-analyst/: SKILL.md
.claude/skills/skill-scaffolder/: SKILL.md
.claude/skills/uv-pytest/: SKILL.md
.claude/skills/uv-pytest/scripts/: run_pytest.sh
.github/: cliff.toml  dependabot.yml
.github/workflows/: deploy-docs.yml  pr-checks.yml  release.yml  tag-and-release.yml  update-data.yml  version-bump-pr.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-package-scaffold-prerequisites/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-story-angle-detection-five-act-data-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-plan-then-write-pipeline-co-authoring-ui/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.sculptor/: code.md  testing.md
RELEASE_PROCESS/: index.html
agent-cli/cli-reference/: index.html
agent-cli/skills-usage/: index.html
agent-cli/tracing/: index.html
api-reference/pitlane-agent/agent/: index.html
api-reference/pitlane-agent/cli/: index.html
api-reference/pitlane-agent/scripts/: index.html
api-reference/pitlane-agent/temporal/: index.html
api-reference/pitlane-web/app/: index.html
api-reference/pitlane-web/config/: index.html
api-reference/pitlane-web/session/: index.html
architecture/agent-system/: index.html
architecture/overview/: index.html
architecture/skills/: index.html
architecture/temporal-context/: index.html
architecture/tool-permissions/: index.html
architecture/workspace-management/: index.html
changelog/: index.html
developer-guide/adding-skills/: index.html
developer-guide/code-quality/: index.html
developer-guide/contributing/: index.html
developer-guide/project-structure/: index.html
developer-guide/release-process/: index.html
developer-guide/setup/: index.html
developer-guide/testing/: index.html
docs/: F1_ELO_Story_Detection_System_Design.md  RELEASE_PROCESS.md  changelog.md  index.md  license.md
docs/agent-cli/: cli-reference.md  skills-usage.md  tracing.md
docs/api-reference/pitlane-agent/: agent.md  cli.md  commands.md  scripts.md  temporal.md
docs/api-reference/pitlane-web/: app.md  config.md  session.md
docs/architecture/: agent-system.md  overview.md  skills.md  temporal-context.md  tool-permissions.md  workspace-management.md
docs/developer-guide/: adding-skills.md  code-quality.md  contributing.md  project-structure.md  release-process.md  setup.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/user-guide/: analysis-types.md  cli-reference.md  skills-usage.md  tracing.md  web-interface.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
includes/abbreviations/: index.html
license/: index.html
scripts/: bump_version.py
search/: search_index.json
user-guide/analysis-types/: index.html
user-guide/web-interface/: index.html
