[project]
name = "pitlane-ai"
version = "0.1.2-test"
description = "F1 data analysis powered by AI agents"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pitlane-agent",
    "pitlane-web",
]

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
pitlane-agent = { workspace = true }
pitlane-web = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest>=8.0",
    "ruff>=0.8.4",
    "pre-commit>=4.5.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
