[project]
name = "pitlane-ai"
version = "0.2.1"
description = "F1 data analysis powered by AI agents"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Apache-2.0" }
authors = [
    { name = "John Hudzina" , email="pitlaneagent@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pitlane-agent",
    "pitlane-web",
]

[project.urls]
Homepage = "https://github.com/jshudzina/PitLane-AI"
Repository = "https://github.com/jshudzina/PitLane-AI"
Issues = "https://github.com/jshudzina/PitLane-AI/issues"

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
pitlane-agent = { workspace = true }
pitlane-web = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2.0",
    "pytest>=8.0",
    "ruff>=0.8.4",
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.20.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
